--- a/root/fields/system/html/field_include_into.html
+++ b/root/fields/system/html/field_include_into.html
@@ -24,7 +24,7 @@
     if($release){
         $is_release = 1;
         @parents_topics = $c->model('Baseliner::BaliTopic')->search(
-                                { rel_type=>'topic_topic', -or => {'categories.is_changeset' => 1, 'categories.is_release' => 1}, from_mid => $data->{topic_mid}, rel_field => {"<>",\@fields} },
+                                { rel_type=>'topic_topic', -or => {'categories.is_changeset' => 1, 'categories.is_release' => 1}, from_mid => $data->{topic_mid}, rel_field => {"not in",\@fields} },
                                 { join=>['categories','parents','master'], select=>['mid','title', 'progress', 'categories.name', 'categories.color'], as=>['mid','title','progress','name','color'] }
                                 )->hashref->all;
         @parents_topics = $c->model('Topic')->append_category( @parents_topics );
@@ -32,7 +32,7 @@
     }
     else{
         @parents_topics = $c->model('Baseliner::BaliTopic')->search(
-                                { rel_type=>'topic_topic', 'categories.is_release' => {'!=',1}, to_mid => $data->{topic_mid}, rel_field => {"<>",\@fields} },
+                                { rel_type=>'topic_topic', 'categories.is_release' => {'!=',1}, to_mid => $data->{topic_mid}, rel_field => {"not in",\@fields} },
                                 { join=>['categories','children','master'], select=>['mid','title', 'progress', 'categories.name', 'categories.color'], as=>['mid','title','progress','name','color'] }
                                 )->hashref->all;
         @parents_topics = $c->model('Topic')->append_category( @parents_topics );
