--- a/root/site/header.html
+++ b/root/site/header.html
@@ -59,8 +59,10 @@
     <script type="text/javascript" src="/static/ace/ace.js"></script>
 
     <!-- Timeline Similes -->
-    <!-- link rel="stylesheet" href="/static/timeline/clarive-timeline.css" / -->
+    <link rel="stylesheet" href="/static/timeline/jquery.timeline.css">
     
+    <!-- link rel="stylesheet" href="/static/timeline/clarive-timeline.css" / -->
+
     <!-- CodeMirror -->
     <link rel="stylesheet" href="/static/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="/static/codemirror/theme/elegant.css">
