- CI dbi connection and services DB deploy - PAUSED for job - job dashboard aggregation fixes - CI->run_service - job->natures - Storable job_stash serializer - _ci( ns=>..., moniker=>... ) - DSL current statement tracking - newjob from lifecycle ok - top service level - service rename stash fix - Services->launch with Catpure::Tiny

--- a/root/comp/dashboard_job.html
+++ b/root/comp/dashboard_job.html
@@ -63,7 +63,7 @@
         
         <div class="grid_12">
             <!--######INICIO TABLA EJECUCION ##################################################################################-->
-            <h3><% _loc( 'Run') %></h3>
+            <h3><% _loc( 'Run Summary') %></h3>
             <table class="table table-bordered table-condensed dashboard">
                 <thead>
                     <tr>
@@ -75,7 +75,7 @@
                 <tbody>
 <%perl>
     my @steps = ( 'PRE', 'RUN', 'POST', 'END' );
-    my $colors = { Success => '#00BB00', Warning => '#00BBBB', Error => '#BB0000'};
+    my $colors = { Success => '#00BB00', Warning => '#E0B500', Error => '#BB0000'};
     for my $step ( @steps ) {
         if ( $servicios->{$step} ) {
             my @services = _array $servicios->{$step};
@@ -137,16 +137,16 @@
                 my @paquetes = _array $contenido->{packages}->{$aplicacion};
                 my $tot_paquetes = scalar @paquetes;
                 my $first = 1;
-                for my $paquete ( @paquetes ) {
+                for my $changeset ( @paquetes ) {
                     if ( $first ) {
 </%perl>                        
                     <tr>
-                        <td rowspan="<%$tot_paquetes%>"><b><% _loc( 'Changesets') %>(<% $aplicacion %>)</b></td>
+                        <td rowspan="<%$tot_paquetes%>"><b><% _loc( 'Changesets') %> (<% $aplicacion %>)</b></td>
 <%perl>
                         $first = 0;
                     }
 </%perl>                            
-                        <td><%$paquete->{type}%>/<%$paquete->{name}%></td>
+                        <td><% $changeset->topic_name %></td>
                     </tr>
 <%perl>
                 }
