--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -155,7 +155,7 @@ padding: 2px 4px 2px 7px;
             <a href="#activity<% $ii %>" data-toggle="tab"><% _loc('Activity') %></a>
         </li>
         <li <% $jobs or 'style="display: none"' %>>
-            <a href="#jobs<% $ii %>" data-toggle="tab"><% _loc('Jobs') %></a>
+            <a href="#jobs<% $ii %>"  id="tab-jobs<% $ii %>"data-toggle="tab"><% _loc('Jobs') %></a>
         </li>
         <li <% $tabactive[3] and 'class="active"' %>>
             <a href="#timeline<% $ii %>" id="tab-timeline<% $ii %>" data-toggle="tab"><% _loc('Timeline') %></a>
@@ -212,12 +212,7 @@ padding: 2px 4px 2px 7px;
             </div> <!-- activity tab -->
 
             <div class="tab-pane <% $tabactive[2] and 'active' %>" id="jobs<% $ii %>">
-%  foreach my $job ( _array( $jobs ) ) {
-                <div style="margin-left: 20px">
-                    <p><a href="javascript:Baseliner.addNewTab('/job/log/dashboard?id_job=<% $job->{id} %>&name=<% $job->{name} %>','<% $job->{name} %>')"><% $job->{name} %></a> - <% _loc( $job->{status} ) %>  <small><% $job->{ts} %></small></p>
-                    <hr />
-                </div> 
-%}
+                <div id="topic-jobs<% $ii %>"></div>
             </div> <!-- jobs tab -->
 
             <div class="tab-pane <% $tabactive[3] and 'active' %>" id="timeline<% $ii %>">
@@ -231,6 +226,12 @@ padding: 2px 4px 2px 7px;
                             Baseliner.timeline({ 
                                 mid: '<% $topic_mid %>', 
                                 render_to: "topic-timeline<% $ii %>",
+                                parent_id:'<% $ii %>' 
+                            });
+                        } else if( e.target.id == "tab-jobs<% $ii %>" && '<% $topic_mid %>' != '' ) {
+                            Baseliner.jobs_for_topic({ 
+                                mid: '<% $topic_mid %>', 
+                                render_to: "topic-jobs<% $ii %>",
                                 parent_id:'<% $ii %>' 
                             });
                         } // if tab
