--- a/root/site/top.html
+++ b/root/site/top.html
@@ -89,3 +89,5 @@
             }
         });
     </script>
+
+%# consider including templates <& /site/templates.html &>, and adding it to JS Reload menu option for testing
