--- a/root/fields/system/html/field_release.html
+++ b/root/fields/system/html/field_release.html
@@ -4,7 +4,7 @@
 </%args>
 
     <tr>
-      <th><% _loc($meta->{id_field}) %>:</th>
+      <th><% _loc($meta->{name_field}) %>:</th>
       <td>
         <span class="arrow_box" style="padding: 3px;cursor:pointer; background-color:<% $data->{$meta->{id_field}}->{color} || 'transparent' %>" 
                 onclick="javascript:Baseliner.show_topic(<% $data->{$meta->{id_field}}->{mid} %>, '<% $data->{$meta->{id_field}}->{title} %>')">
