Fixed generic_topic template

--- a/root/comp/topic/topic_msg.html
+++ b/root/comp/topic/topic_msg.html
@@ -8,6 +8,7 @@
     $jobs => 0
     $HTMLbuttons => 0
     $permissionEdit => 0
+    $permissionDelete => 0
     $permissionComment => 0
 </%args>
 <%perl>
