--- a/root/email/generic_topic.html
+++ b/root/email/generic_topic.html
@@ -4,6 +4,7 @@
     $subject
     $mid
     $to
+    $name_category
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
@@ -20,7 +21,7 @@
     </div>
     <div class='box'>
         <div class="trace error">
-            <p>El t&oacute;pico <% $title %> ha sido modificado/creado por <% $username %></p>
+            <p>El t&oacute;pico <% $title %> de la categoría <% $name_category %> ha sido modificado/creado por <% $username %></p>
             <p>Pulse <a href="<% Baseliner->config->{web_url}."/tab/topic/view?topic_mid=".${mid} %>">aqu&iacute;</a> para revisarlo</p>
         </div>
     </div>
