--- a/root/fields/system/html/field_cis.html
+++ b/root/fields/system/html/field_cis.html
@@ -8,5 +8,13 @@
   <td 
       class="fieldlet-html"
       style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" >
-      <% _ci((_array( $data->{$meta->{id_field}} ) )[0])->{name} %></td>
+% 	
+	my @cis = _array( $data->{$meta->{id_field}});
+	my $name = "";
+	if ( @cis ) {
+		$name = _ci( $cis[0] )->{name};
+	}
+%
+		<% $name %>
+	</td>
 </tr>
