--- a/root/fields/system/html/field_cis.html
+++ b/root/fields/system/html/field_cis.html
@@ -7,14 +7,7 @@
   <th><% _loc($meta->{name_field}) %>:</th>
   <td 
       class="fieldlet-html"
-      style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" >
-<%perl> 	
-	my @cis = _array( $data->{$meta->{id_field}});
-	my $name = "";
-	if ( @cis ) {
-		$name = _ci( $cis[0] )->{name};
-	}
-<%/perl>
-		<% $name %>
-	</td>
+      style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" >	
+	   <%_ci( _array( $data->{$meta->{id_field}})[0] )->{name} if (_array( $data->{$meta->{id_field}}) ) %>
+  </td>
 </tr>
