--- a/root/dashlets/topics_open_by_category_pie.html
+++ b/root/dashlets/topics_open_by_category_pie.html
@@ -49,7 +49,8 @@ var category_id = new Array();
         grid: {
             hoverable: true,
             clickable: true
-        }        
+        },
+        tilt: 0.5
 	});
 	$("#<%$graph_id%>").bind("plothover", pieHover);
 	$("#<%$graph_id%>").bind("plotclick", pieClick);    
