--- a/root/dashlets/topics_by_category_pie.html
+++ b/root/dashlets/topics_by_category_pie.html
@@ -46,7 +46,8 @@ html: /dashlets/topics_by_category_pie.html
                         formatter: function(label, series){
                             return '<div style="font-size:8pt;text-align:center;padding:2px;color:white;">'+Math.round(series.percent)+'%</div>';
                         },
-                        background: { opacity: 0 }
+                        background: { opacity: 0 },
+                        threshold: 0.2
                     }
                 }
             },
