--- a/root/dashlets/emails.html
+++ b/root/dashlets/emails.html
@@ -25,7 +25,7 @@ html: /dashlets/emails.html
 %foreach my $email (_array @emails){
                 <tr>
                     <td colspan='3'><b><a href="javascript:Baseliner.addNewTabComp('/message/inbox?username=<%$c->username%>&query=<%$email->{id}%>', _('Inbox') );"><%$email->{subject}%></a></b></td>
-                    <td><%$email->{sender}%></td>
+                    <!-- <td><%$email->{sender}%></td> -->
                     <td><%$email->{sent}%></td>
                 </tr>
 %}
