bali: stacktrace off

--- a/root/site/top.html
+++ b/root/site/top.html
@@ -49,7 +49,7 @@
     <!-- <link rel="stylesheet" href="/static/metal/metal.css" type="text/css" /> -->
     <link rel="stylesheet" type="text/css" href="/static/ext/resources/css/ext-all.css" />
 
-    <script type="text/javascript" src="/site/stacktrace.js"></script>
+    <!-- <script type="text/javascript" src="/site/stacktrace.js"></script> -->
     <script type="text/javascript" src="/static/ext/adapter/ext/ext-base<% $debug %>.js"></script>
     <!-- script type="text/javascript" src="/static/ext/adapter/jquery/ext-jquery-adapter<% $debug %>.js"></script -->
 
