--- a/root/dashlets/topics_open_by_category_pie.html
+++ b/root/dashlets/topics_open_by_category_pie.html
@@ -12,13 +12,14 @@ html: /dashlets/topics_open_by_category_pie.html
     my $title = $c->stash->{topics_open_by_category_title};
 </%perl>
 
-
-    <h2><%$title%></h2><br>
-    <div id="principal" class="grid_10">
-        <div id="<%$graph_id%>" style="height: 250px; width: 250px; float: left"
-            onmouseout="document.body.style.cursor='default';"></div>
-        <div id="<%$graph_id%>legend"  style="float:right;"></div>
-    </div>
+	<div style="width:100%;">
+		<h2><%$title%></h2><br>
+		<div id="principal" class="grid_10">
+			<div id="<%$graph_id%>" style="height: 250px; width: 250px; float: left"
+				onmouseout="document.body.style.cursor='default';"></div>
+			<div id="<%$graph_id%>legend"  style="float:right;"></div>
+		</div>
+	</div>
 
 
 <script type="text/javascript">
