Changed double quotes by quotes to fix IE8 error?

--- a/root/site/header.html
+++ b/root/site/header.html
@@ -129,18 +129,18 @@
     <link rel="stylesheet" type="text/css" href="/static/superbox/superbox.css" /> 
 
     <!-- model depends on superbox -->
-    <script type='text/javascript' src='/static/latinise.js'></script>
+    <script type="text/javascript" src="/static/latinise.js"></script>
     <script type="text/javascript" src="/site/model.js"></script>
     <script type="text/javascript" src="/comp/topic/topic_lib.js"></script>
 
     <!-- Cal -->
-    <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.css' />
-    <link rel='stylesheet' type='text/css' href='/static/fullcalendar/fullcalendar.print.css' media='print' />
-    <script type='text/javascript' src='/static/fullcalendar/fullcalendar.min.js'></script>
+    <link rel="stylesheet" type="text/css" href="/static/fullcalendar/fullcalendar.css" />
+    <link rel="stylesheet" type="text/css" href="/static/fullcalendar/fullcalendar.print.css" media="print" />
+    <script type="text/javascript" src="/static/fullcalendar/fullcalendar.min.js"></script>
 
     <!-- Treegrid -->
-    <link rel='stylesheet' type='text/css' href='/static/gridtree/css/treegrid.css' />
-    <script type='text/javascript' src='/static/gridtree/treegrid.js'></script>
+    <link rel="stylesheet" type="text/css" href="/static/gridtree/css/treegrid.css" />
+    <script type="text/javascript" src="/static/gridtree/treegrid.js"></script>
     
     <!-- final css override -->
     <link rel="stylesheet" type="text/css" href="/static/final.css" />
