--- a/root/dashlets/emails.html
+++ b/root/dashlets/emails.html
@@ -11,7 +11,7 @@ html: /dashlets/emails.html
     my @emails = $c->stash->{emails};
 </%perl>
 
-    <div>
+    <div style="clear:left;">
         <h2><% _loc("Messages") %></h2>
         <table class="table table-bordered table-condensed dashboard">
             <thead>
