--- a/root/dashlets/jobs.html
+++ b/root/dashlets/jobs.html
@@ -11,7 +11,7 @@ html: /dashlets/jobs.html
     my @jobs = $c->stash->{jobs};
 </%perl>
 
-    <div>
+    <div style="clear:left;">
         <h2><% _loc("Jobs") %></h2>
         <table class="table table-bordered table-condensed dashboard">
             <thead>
