--- a/root/dashlets/lastjobs.html
+++ b/root/dashlets/lastjobs.html
@@ -12,7 +12,7 @@ html: /dashlets/lastjobs.html
     my $status_id = "status". _nowstamp;
 </%perl>
 
-    <div>
+    <div style="clear:left;">
         <h2><% _loc("Jobs") %></h2>
         <script language="javascript">
             function render_level ( obj, td_id ) {
