--- a/root/dashlets/topics.html
+++ b/root/dashlets/topics.html
@@ -11,7 +11,7 @@ html: /dashlets/topics.html
     my @topics = $c->stash->{topics};
 </%perl>
 
-    <div>
+    <div style="clear:left;">
         <h2><% _loc('Topics') %></h2>
         <table class="table table-bordered table-condensed dashboard">
             <thead>
