--- a/root/email/generic_topic.html
+++ b/root/email/generic_topic.html
@@ -21,7 +21,7 @@
     </div>
     <div class='box'>
         <div class="trace error">
-            <p>El t&oacute;pico <% $title %> de la categoría <% $name_category %> ha sido modificado/creado por <% $username %></p>
+            <p>El t&oacute;pico <% $title %> de la categor&iacute;a <% $name_category %> ha sido modificado/creado por <% $username %></p>
             <p>Pulse <a href="<% Baseliner->config->{web_url}."/tab/topic/view?topic_mid=".${mid} %>">aqu&iacute;</a> para revisarlo</p>
         </div>
     </div>
