Change icon depending on project type

--- a/root/fields/system/html/field_projects.html
+++ b/root/fields/system/html/field_projects.html
@@ -12,7 +12,7 @@
     <ul style="margin-left: 20px">
 % foreach my $project ( _array( $data->{$meta->{id_field}} ) ) {
         <li style="margin: 6px 0px 6px 0px">
-            <h4><img src="/static/images/icons/project.png"><% $project->{name} %></h4>
+            <h4><img src="<% ci->new($project->{mid})->icon %>"><% $project->{name}%></h4>
         </li>
 % }
     </ul>
