New rule template for email 2

--- a/root/email/generic_rule.html
+++ b/root/email/generic_rule.html
@@ -28,7 +28,7 @@
     Stash:
     <div class='box'>
         <div class="trace error">
-            <p><% $stash %></p>
+            <p><% _dump($stash) %></p>
         </div>
     </div>
     Output:
