New rule template for email 5

--- a/root/email/generic_rule.html
+++ b/root/email/generic_rule.html
@@ -1,29 +1,31 @@
 <%args>
-	$subject 
-	$message
-    $dsl
+    $username
+    $subject
+    $to
     $rule_name
-    $output
-    $stash
 </%args>
 <head>
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <title>Accion</title>
-	<& /email/style.css &>
+    <& /email/style.css &>
 </head>
 
 <body>
     <div class='box'>
         <div class="error">
-            <h2>SCM: La regla <% $rule_name %> ha fallado</h2>
+            <h2>CLARIVE: <% $subject %></h2>
         </div>
     </div>
-    Output:
     <div class='box'>
         <div class="trace error">
-            <p><% $output %></p>
+            <p> <% $rule_name %></p>
         </div>
     </div>
+% if ( $ENV{BASELINER_DEBUG} ) {
+    <div class='box'>
+            <p>Enviado a: <% join ",",@{$to->{users}} %></p>
+    </div>
+%}
 </body>
 
