--- a/root/email/generic_rule.html
+++ b/root/email/generic_rule.html
@@ -27,17 +27,17 @@
     </div>
     <div class='box'>
         <div class="trace error">
-            <p> <% $dsl %></p>
+            <pre> <% $dsl %></pre>
         </div>
     </div>
     <div class='box'>
         <div class="trace error">
-            <p> <% $output %></p>
+            <pre> <% $output %></pre>
         </div>
     </div>
     <div class='box'>
         <div class="trace error">
-            <p> <% _dump($stash) %></p>
+            <pre> <% _dump($stash) %></pre>
         </div>
     </div>
 % if ( $ENV{BASELINER_DEBUG} ) {
