link dashlet entornos

--- a/root/dashlets/baselines.html
+++ b/root/dashlets/baselines.html
@@ -95,11 +95,11 @@ html: /dashlets/baselines.html
         <h4><%$entorno->{bl}%></h4>
         
         <div class="progress">
-          <div class="progress-bar progress-bar-success" style="width: <%$entorno->{porcentOk}%>%">
-            <span class="sr-only" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/ok/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totOk}%>/<%$entorno->{total}%> OK'));"><%$entorno->{totOk}%></span>
+          <div class="progress-bar progress-bar-success" style="width: <%$entorno->{porcentOk}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/ok/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totOk}%>/<%$entorno->{total}%> OK'));">>
+            <span class="sr-only" <%$entorno->{totOk}%></span>
           </div>
-          <div class="progress-bar progress-bar-danger" style="width: <%$entorno->{porcentError}%>%">
-            <span class="sr-only" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/nook/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR'));"><%$entorno->{totError}%></span>
+          <div class="progress-bar progress-bar-danger" style="width: <%$entorno->{porcentError}%>%" onmouseover="this.style.cursor='pointer'" onClick="javascript:Baseliner.addNewTabComp('/dashboard/viewjobs/<%$dashboard_id%>/<%$projects%>/nook/<%$entorno->{bl}%>', _('<%$entorno->{bl}%> - <%$entorno->{totError}%>/<%$entorno->{total}%> ERROR'));">
+            <span class="sr-only" ><%$entorno->{totError}%></span>
           </div>
         </div>        
 %}        
