Status in job dashboard

--- a/root/comp/dashboard_job.html
+++ b/root/comp/dashboard_job.html
@@ -28,7 +28,7 @@
                     </tr>
                     <tr>
                         <td><% _loc( 'Status') %></td>
-                        <td id="<% $status_id %>"></td>
+                        <td id="<% $status_id %>"><% _loc($resumen->{status}) %></td>
                     </tr>
                     <tr>
                         <td><% _loc( 'Type') %></td>
